# imef

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  util.py
imef/data/: data_manipulation.py  database.py  download_data.py
imef/particle_tracing/: placeholder.txt
mms-srvy-analysis/: efield-overview.ipynb
modeling/graphs/: Neural_Networks.py  average_2d_data.py  average_3d_data.py  binned.csv  calculate_potential.py  create_potential_gif.py  creating_Kp_plots.py  creating_edi_maps.py  data.pkl  data_manipulation.py  download_data.py  format_data.py  linear_regression.py  modeling.py  plot_nc_data.py  plot_predicted_vs_actual.py  polar.py  polar_bin.csv  potential.py  predict_unified_efield.py  requirements.txt  sample_data.py  storage_objects.py  store_efield_data.py  test_model_to_beat.pth  unified_efield.py
modeling/graphs_merged/: create_potential_gif.py  plot_binned_potential.py  predict_unified_efield.py  unified_efield_merged.py
modeling/linear_regression/: chart_regression.py  data.pkl  data.py  dummy_data.csv  format_data.py  linear_regression.py  logistic_regression.py  modeling.py  train_data.pkl
modeling/testing/: mean_std.py
particle-tracing/boris-tracing/: Charged Particle Motion in Earth Dipole Field.ipynb  Dipole-0.ipynb  Dipole-VS.ipynb  Particle Distribution.ipynb  Plots-Dipole-Tracing2D3D.ipynb  (+6 more)
scripts/: bin_convective_efield.py  create_potential_gif.py  plot_predicted_vs_actual.py  predict_unified_efield.py  random_undersampling.py  sample_data.py  some_plots.py
visualizations/: plot_nc_data.py  visualizations.py
(+56 files in other folders)
