[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "imef"
version = "0.0.0"
authors = [
  { name="Matthew Argall", email="matthew.argall@unh.edu" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.19",
    "xarray>=0.16",
    "scipy>1.5",
    "tqdm>=4.59",
    "requests>=2.27",
    "matplotlib>=3.3",
    "nasa-pymms",
    "bs4>=0.0.1",
    # heliopy depends on sunpy and was discontinued in Oct. 17, 2020.
    # sunpy v2.0.3 was releast Oct 4 2020
    "heliopy==0.15.0",
    "sunpy==2.0.8"
]

[project.urls]
Homepage = "https://github.com/argallmr/imef"
Issues = "https://github.com/argallmr/imef/issues"